# music-video-editor

./: .env.example  README.md  metadata.json  next.config.ts  package-lock.json  package.json  skills-lock.json  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx  page.tsx
app/api/llm/test/: route.ts
app/api/render/: route.ts
backend/: audio_analysis.py  lyrics_timings.py  main.py  pyproject.toml  subtitle_common.py  whisperx_align.py
components/: AudioAnalysisReview.tsx  LyricSyncStep.tsx  MediaGalleryPanel.tsx  PreviewWorkspacePanel.tsx  ProjectOnboardingModal.tsx  PropertiesPanel.tsx  Sidebar.tsx  SubtitleAlignmentModal.tsx  SubtitleLayoutOverlay.tsx  Timeline.tsx  TimelineClip.tsx  TimelineTrack.tsx  TopBar.tsx  VideoPreview.tsx  VideoPreviewPlayer.tsx
components/ui/: dialog.tsx  slider.tsx  textarea.tsx
lib/: audio-analysis-types.ts  audio-analysis.ts  constants.ts  llm-client.ts  lyric-sync.ts  media-drag.ts  media-utils.ts  mel-spectrogram.ts  project-storage.ts  project.ts  render.ts  section-labels.ts  stock-client.ts  subtitle-colors.ts  timeline-snap.ts  types.ts  visual-clip-colors.ts
lib/server/: ffmpeg.ts  remotion.ts  render-jobs.ts  render-status.ts
notebooks/: audio_analysis_preview.ipynb
rendering/remotion/: MusicVideoComposition.tsx  Root.tsx
test_data/: align_smoke.py  api_align_test.py  last_align_response.json  render_smoke.ts  text.txt  validate_align_json.py  validate_render_manifest.ts
test_data/clip/: last_align_response.json  validaion_data.txt
test_data/goral/: last_align_response.json  text.txt  validation_data.txt
(+8 files in other folders)
